<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/pigeonListFragment"
        android:icon="@drawable/ic_pigeon"
        android:title="我的鸽子" />
    <item
        android:id="@+id/loftListFragment"
        android:icon="@drawable/ic_loft"
        android:title="鸽舍管理" />
    <item
        android:id="@+id/familyListFragment"
        android:icon="@drawable/ic_family"
        android:title="家族图谱" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="设置" />
</menu>
